--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+
+<title>gg</title>
+
+
 </head>
 <body>
-<h1>Hello Coursera! </h1>
+<h1>gg</h1>
+
+
+
+ 
+
 </body>
 </html>
