My first assignment

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,9 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-	<title>Hello Coursera!</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Web development languages</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-<h1>Hello Coursera! </h1>
+    <h1>Web development languages</h1>
+    <div class="row">
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="HTML">
+                <h2>HTML</h2>
+                <p>
+                	HTML makes up the layout and structure for your website. This language is dynamic and allows you to create a beautiful website using less code. HTML is used to create a starting point for the website and is what most of your static pages start from. A better way to understand this language is to consider it as the skeleton that is holding your website together.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-6 col-sm-12">
+            <section class="CSS">
+                <h2>CSS</h2>
+                <p>
+                	CSS is the language developers can use to style a website. The style sheet language describes how your website is presented and its layout. CSS is used hand in hand with HTML to add colors, backgrounds, layouts, font sizes, and more. This language is a core technology web developers use to design and build websites.
+                </p>
+            </section>
+        </div>
+        <div class="col-lg-4 col-md-12 col-sm-12">
+            <section class="JavaScript">
+                <h2>JavaScript</h2>
+                <p>
+                    JavaScript is used in many aspects of web development. Web developers use this language to add interactive elements to their websites. User engagement is important to your business, and your web developer should be incorporating JavaScript elements in your design.
+                </p>
+            </section>
+        </div>
+    </div>
 </body>
+
 </html>
